--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>springcloud-api</module>
+        <module>springcloud-provider-8001</module>
+        <module>springcloud-provider-8001</module>
+        <module>springcloud-consumer-80</module>
     </modules>
     <packaging>pom</packaging>
 
