--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>springcloud-provider-8001</module>
         <module>springcloud-provider-8001</module>
         <module>springcloud-consumer-80</module>
+        <module>springcloud-eureka-7001</module>
     </modules>
     <packaging>pom</packaging>
 
