--- a/springcloud-provider-8001/src/main/resources/application.yml
+++ b/springcloud-provider-8001/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
  port: 8001
+eureka:
+ client:
+  service-url:
+   defaultZone: http://localhost:7001/eureka
+spring:
+ application:
+  name: provider-8001
