普通http访问和ribbon访问上传

--- a/springcloud-consumer-ribbon-80/pom.xml
+++ b/springcloud-consumer-ribbon-80/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springcloud-consumer-80</artifactId>
-    <description>部门微服务消费者</description>
+    <artifactId>springcloud-consumer-ribbon-80</artifactId>
+    <description>部门微服务消费者ribbon负载均衡访问</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,6 +23,19 @@
             <groupId>com.wwt</groupId>
             <artifactId>springcloud-api</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <!-- Ribbon相关 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-ribbon</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
