--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>springcloud-eureka-7001</module>
         <module>springcloud-provider-hystrix-8001</module>
         <module>springcloud-consumer-ribbon-80</module>
+        <module>springcloud-consumer-feign-80</module>
     </modules>
     <packaging>pom</packaging>
 
