ribbon、feign客户端代码提交
主要是ribbon和feign客户端的启动类都加上了@EnableDiscoveryClient注解，不加上就找不到eureka上注册的服务

--- a/springcloud-provider-8001/src/main/resources/application.yml
+++ b/springcloud-provider-8001/src/main/resources/application.yml
@@ -5,8 +5,8 @@ eureka:
   service-url:
    defaultZone: http://localhost:7001/eureka
  instance:
-  instance-id: microservicecloud-dept8001  #自定义服务名称信息
-  prefer-ip-address: true  #访问路径可以显示IP地址
+  #instance-id: microservicecloud-dept8001  #自定义服务名称信息
+  #prefer-ip-address: true  #访问路径可以显示IP地址
 spring:
  application:
   name: provider-dept
