--- a/springcloud-eureka-7001/src/main/resources/application.yml
+++ b/springcloud-eureka-7001/src/main/resources/application.yml
@@ -4,7 +4,9 @@ server:
 eureka: 
   instance:
     hostname: localhost #eureka服务端的实例名称
-  client: 
+  client:
+    instance:
+      #prefer-ip-address: true  #访问路径可以显示IP地址
     register-with-eureka: false     #false表示不向注册中心注册自己。
     fetch-registry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
     service-url: 
